--- a/variable/tsconfig.json
+++ b/variable/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-
+      "target": "esnext",
+      "lib": ["DOM", "ESNext"],
+      "moduleResolution": "node"
     }
-}
+  }
